--- a/Certificate.html
+++ b/Certificate.html
@@ -77,6 +77,7 @@
                             <p class="lead"><a href="certificate/交通大學工業工程學士畢業證書.pdf">交通大學工業工程與管理學士畢業證書</a></p>
                             <p class="lead"><a href="certificate/TAIPEI BLOCKCHAIN WEEK 2022.jpg">TAIPEI BLOCKCHAIN WEEK 2022</a></p>
                             <p class="lead"><a href="certificate/AWS證書_龔慕祥.pdf">AWSOME DAY ONLINE CONFERENCE</a></p>
+                            <p class="lead"><a href="certificate/2023臺灣學術倫理教育資源中心修課證明.pdf">2023臺灣學術倫理教育資源中心修課證明</a></p>
                             <p class="lead"><a href="certificate/【竹科管理局免費課程】AR-VR在智慧機械的展場設計 電子上課證明.pdf">【竹科管理局課程】AR-VR在智慧機械的展場設計 電子上課證明</a></p>
                             <p class="lead"><a href="certificate/【竹科管理局免費課程】製程精進與品質管理 電子上課證明.pdf">【竹科管理局課程】製程精進與品質管理 電子上課證明</a></p>
                             <p class="lead"><a href="certificate/【竹科管理局免費講座】行動物聯網發展與應用 電子上課證明.pdf">【竹科管理局講座】行動物聯網發展與應用 電子上課證明</a></p>
