--- a/EN/Education_and_Experience.html
+++ b/EN/Education_and_Experience.html
@@ -55,6 +55,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Experience</h3>
+                            <p class="lead">2022/07 - NOW Project Assistant Researcher, NARLabs National Center for High-Performance Computing (NCHC)  </p>
                             <p class="lead">2022/07 - 2022/09 Python Artificial Intelligence and Data Science Development Program, Tze Chiang Foundation of Science and Technology (TCFST)  </p>
                             <p class="lead">2020/11 - 2022/07 Production line Supervisor, Powertech Technology Inc (PTI)</p>
                             <p class="lead">2019/19 - 2020/06 Teacher's Association Assistant, National Chiao Tung University (NCTU)</p>
