--- a/Education_and_Experience.html
+++ b/Education_and_Experience.html
@@ -55,6 +55,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>經歷</h3>
+                            <p class="lead">2023/07 - 迄今 國家實驗研究院 國家高速網路與計算中心 專案佐理研究員</p>
                             <p class="lead">2022/07 - 2022/09 自強基金會 Python人工智慧與資料科學人才養成班第02期學員</p>
                             <p class="lead">2020/11 - 2022/07 力成科技 生產線主任</p>
                             <p class="lead">2019/19 - 2020/06 國立交通大學 教師會助理</p>
