--- a/EN/index.html
+++ b/EN/index.html
@@ -50,7 +50,7 @@
             </div>
         </header>
 
-        <section id="intro">
+        <!-- <section id="intro">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section id="second">
             <div class="container">
@@ -75,11 +75,11 @@
                                 <h5>Danny</h5>
                             </div>
                             <div class="col-md-8 text-left">
-                                <p>Hello! My name is Danny, and here is my personal webpage~</p>
-                                <p>Both my bachelor's and master's degrees are in industrial engineering at NCTU(NYCU). During my studies, I have used R language to do some data analysis projects, and I have also taken courses related to databases such as mySQL. Therefore, I have data analysis ability.</p>
-                                <p>And the topic of my thesis research is the construction method of the abnormal distribution control chart, so I also have the statistical ability.</p>
-                                <p>I have worked as a production Supervisor at Powertech Technology for more than one and a half years. The work requires a lot of cross-departmental communication, people and crisis management, so I am also good at communication and cooperation.</p>
-                                <p>In addition, I have completed training at the Tze Chiang Foundation to study courses related to big data analysis. I am looking forward to enter this new fields and hope to become a talent in big data analysis and machine learning area in the future.</p>
+                                <p>Hello! My name is Danny, and this is my personal webpage.</p>
+                                <p>I hold both a Bachelor's and Master's degree in Industrial Engineering from NCTU(NYCU). During my academic journey, I worked on data analysis projects using the R programming language and completed courses in database management, including MySQL. Consequently, I possess strong data analysis skills.</p>
+                                <p>My research focused on the construction methods of control charts for non-normal distributions in new processes, showcasing my foundation in statistics.</p>
+                                <p>With over a year and a half of experience as a Production Supervisor at Powertech Technology, I excelled in cross-departmental communication, personnel management, and crisis resolution. I am adept at effective communication and collaboration.</p>
+                                <p>Currently, I serve as a Project Assistant Researcher at the National Center for High-Performance Computing, where I am responsible for data science analysis tasks. I am eager to venture into new domains and aspire to become a talent in the fields of big data analysis and machine learning in the future.</p>
                             </div>
                         </div>
                     </div>
