--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">主頁 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">關於我 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="Education_and_Experience.html">學經歷 <span class="sr-only">(current)</span></a>
@@ -50,7 +50,7 @@
             </div>
         </header>
 
-        <section id="intro">
+        <!-- <section id="intro">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row">
@@ -62,13 +62,12 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section id="second">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
-                        <h3>關於我</h3>
                         <div class="row">
                             <div class="col-md-4">
                                 <img src="pic/Danny.png">
@@ -79,7 +78,7 @@
                                 <p>本人學士與碩士均是念交通大學的工業工程，在學期間有使用R語言做過一些資料分析的課題，也修過mySQL等資料庫相關課程，因此本人具有資料分析能力。</p>
                                 <p>且本人論文研究題目為新製程非常態分布管制圖之建構方法，因此我也具備統計基礎。</p>
                                 <p>本人曾在力成科技擔任超過一年半的生產主任，工作內容需要大量的跨部門溝通、人員管理以及危機處理，因此我也是善於溝通與合作的人。</p>
-                                <p>並且本人結訓於自強基金會學習大數據分析相關課程，對於跨入新領域充滿期待，希望未來能成為大數據分析與機器學習相關領域的人才。</p>
+                                <p>我目前在國家高速網路與計算中心擔任專案佐理研究員，負責資料科學分析相關工作，對於跨入新領域充滿期待，希望未來能成為大數據分析與機器學習相關領域的人才。</p>
                             </div>
                         </div>
                     </div>
