--- a/Certificate.html
+++ b/Certificate.html
@@ -111,7 +111,7 @@
                             <li><a href="Certificate.html">相關證書</a></li>
                         </ul>
                         <ul>
-                            <li><a href="autobiography.html">自傳</a></li>
+                            <li><a href="little_game.html">小遊戲</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
                             <li><a href="project.html">我的專案</a></li>
                         </ul>
