--- a/EN/index.html
+++ b/EN/index.html
@@ -107,7 +107,7 @@
                             <li><a href="Certificate.html">Certificate</a></li>
                         </ul>
                         <ul>
-                            <li><a href="autobiography.html">Autobiography</a></li>
+                            <li><a href="little_game.html">Little Game</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
                             <li><a href="project.html">Project</a></li>
                         </ul>
