--- a/EN/little_game.html
+++ b/EN/little_game.html
@@ -39,8 +39,8 @@
                             Language
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="../Certificate.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="Certificate.html">英文 English</a>
+                            <a class="dropdown-item" href="../autobiography.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="autobiography.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
@@ -49,42 +49,13 @@
             </div>
         </header>
 
-        <section id="Award">
+        <section id="autobiography">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>Award</h3>
-                            <p class="lead"><a href="../certificate/力成科技住任季報獎狀.jpg">2022/03 PoewrTech Technology Inc production line supervisor quarterly report competition winner</a></p>
-                            <p class="lead"><a href="../certificate/ARML台灣區獲獎證明.pdf">2013/04 ARML Silver medal in Taiwan regional Mathematical Contest</a></p>
-                            <p class="lead"><a href="../certificate/IRML獲獎證明.pdf">2013/06 IRML Participation award in Mathematical Contest</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="Certificate">
-            <div class="jumbotron">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3>Certificate</h3>
-                            <p class="lead"><a href="../certificate/Python人工智慧與資料科學人才養成班第02期結訓證書.pdf">Python AI and data science Development Program completion certificate</a></p>
-                            <p class="lead"><a href="https://hahow.in/certificates/648ac470d3a485c2ee90586c">Learning AI : Light up the AI skill tree</a></p>
-                            <p class="lead"><a href="https://hahow.in/certificates/658a712267c1abaca3d4eb33">Docker Complete Guide to Getting Started with Deployment</a></p>
-                            <p class="lead"><a href="../certificate/多益金色證書202003 200K.jpg">TOEIC Gold Certificate</a></p>
-                            <p class="lead"><a href="../certificate/交通大學工業工程碩士畢業證書.pdf">NCTU Master's Degree Certificate in Industrial Engineering and Management</a></p>
-                            <p class="lead"><a href="../certificate/交通大學工業工程學士畢業證書.pdf">NCTU Bachelor's Degree Certificate in Industrial Engineering and Management</a></p>
-                            <p class="lead"><a href="../certificate/TAIPEI BLOCKCHAIN WEEK 2022.jpg">TAIPEI BLOCKCHAIN WEEK 2022</a></p>
-                            <p class="lead"><a href="../certificate/AWS證書_龔慕祥.pdf">AWSOME DAY ONLINE CONFERENCE</a></p>
-                            <p class="lead"><a href="certificate/2023臺灣學術倫理教育資源中心修課證明.pdf">2023Taiwan Academic Ethics Education Resource Center</a></p>
-                            <p class="lead"><a href="../certificate/【竹科管理局免費課程】AR-VR在智慧機械的展場設計 電子上課證明.pdf">【Hsinchu Science Park Bureau】AR-VR in Smart Machinery Exhibition Design</a></p>
-                            <p class="lead"><a href="../certificate/【竹科管理局免費課程】製程精進與品質管理 電子上課證明.pdf">【Hsinchu Science Park Bureau】Process Improvement and Quality Management</a></p>
-                            <p class="lead"><a href="../certificate/【竹科管理局免費講座】行動物聯網發展與應用 電子上課證明.pdf">【Hsinchu Science Park Bureau】Development and Applications of Mobile Internet of Things (IoT)</a></p>
-                            <p class="lead"><a href="../certificate/【竹科管理局免費講座】微感測器以及其於智慧機械和智慧製造之應用 電子上課證明.pdf">【Hsinchu Science Park Bureau】Microsensors and Their Applications in Smart Machinery and Industry 4.0</a></p>
-                            <p class="lead"><a href="../certificate/【竹科管理局線上免費講座】3D-IC封裝發展藍圖、現況與未來趨勢 電子上課證明.pdf">【Hsinchu Science Park Bureau】 Development roadmap, current status, and future trends of 3D-IC packaging</a></p>
-                            <p class="lead"><a href="../certificate/【竹科管理局線上補助課程】AIOT智慧物聯網核心技術與應用 電子上課證明.pdf">【Hsinchu Science Park Bureau】 Core Technologies and Applications of AIoT</a></p>
+                            <h3>my little game</h3>
+                            <p class="lead"><a href="https://dannyk1003.github.io/Block-Move-Master/">Block Move Master</a></p>
                         </div>
                     </div>
                 </div>
