--- a/EN/little_game.html
+++ b/EN/little_game.html
@@ -39,8 +39,8 @@
                             Language
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="../autobiography.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="autobiography.html">英文 English</a>
+                            <a class="dropdown-item" href="../little_game.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="little_game.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
