--- a/autobiography.html
+++ b/autobiography.html
@@ -6,7 +6,7 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
-        <title>Education and Experience</title>
+        <title>Autobiography</title>
     </head>
     <body>
         <header>
@@ -55,14 +55,22 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>自傳</h3>
-                            <p>我是龔慕祥，今年27歲，2020年畢業於國立交通大學工業工程與管理研究所，並於2022年在自強基金會的Python人工智慧與資料科學人才養成班結訓。我生於一家四口的家庭，家境小康而溫馨和樂。母親在學校任教，因此家中總是充滿著書香的氣息，也養成了我喜歡閱讀的習慣。父親在園區科技業工作近三十載，也使我耳濡目染，希望能投身科技業成為科技人。</p>
-                            <p>我從小喜歡數學，面對困難的題目若是能夠解開來能得到偌大的成就感。在新竹高中就讀數理資優班時也曾與同學一同參加數學競試ARML LOCAL(美國地區高中數學聯賽臺灣選拔賽)，得到出國參加ARML(美國地區高中數學聯賽)的資格，為此參加的同學們還一起進行了特訓，共同合作互相砥礪，為的就是能凱旋而歸，雖然最後沒有得到好的名次，但這樣的經驗也讓我受益良多，對於團隊合作的重要性也更加了解。</p>
-                            <p>大學期間我修了相當多的課程，其中包含了統計學與資料分析和Python等課程，這也是我初次接觸到程式設計與資料分析的相關方法與應用，也讓我對程式設計與統計資料分析等領域產生興趣。</p>
-                            <p>就讀碩士期間，我修了實驗設計及進階資料分析與資料科學等相關課程，在學習資料分析的過程中我學得相當有興趣，課程中的小專案讓我們使用R語言對醫院病患的資料進行分析，以預測病患在未來是否會回診，另一個小專案則是分析許多商家的資料，以預測商家未來的營收如何。我也在這些小專案中得到了不錯的成果，更使我希望能從事資料分析相關工作。</p>
-                            <p>我的畢業論文是利用複式模擬法建構Burr分布新製程的個別值與移動全距管制圖，而撰寫論文的過程我使用Matlab程式語言進行資料的模擬與研究方法的建構，以及我也參與了科技部的計畫，而我們研究的過程中也利用了Matlab程式語言對非常態的製程進行管制圖的建構，因此我能使用Matlab與R程式語言解決問題。</p>
-                            <p>畢業後我的第一份工作是在力成科技擔任生產線主任，工作內容需要大量的跨部門溝通、人員管理與危機處理，因此我也是善於溝通與合作的人，期間我做過一項提升生產品質的專案，藉由獎勵機制與人員在訓練等等方式來提升部門人員的品質意識，這項專案降低了人員造成的人為異常，更提升了生產品質並減少報廢品，也讓部門績效能有所提升。</p>
-                            <p>大學與碩士期間對程式語言以及資料分析的接觸讓我對相關領域產生興趣，再加上近年對於資料科學與大數據分析相關人才需求的提升，讓我決定離開力成科技進入相關領域。離開力成後，我便參加了自強基金會的Python人工智慧與資料科學人才養成班，期間學習了運用Python對雜亂的遠史資料進行資料清洗、資料分析以及解釋分析結果，最終我們運用所學完成一個關於遊戲類型與銷售量的資料分析小專案，所以收穫不少。</p>
-                            <p>現在的我在自強的課程結訓後依然持續精進自己的程式能力，並且有閒暇時間時參與相關領域的講座，雖然目前的我還沒有相關的實務經驗，但相信未來如果有機會投身相關領域我能夠運用所學，創造價值。</p>
+                            <p>我叫龔慕祥，畢業於國立陽明交通大學工業工程與管理研究所，並完成自強基金會「Python 人工智慧與資料科學人才養成班」的訓練課程。目前任職於國家高速網路與計算中心，擔任專案佐理研究員，負責資料分析與視覺化，致力於將龐雜的數據轉化為具洞察力的圖像資訊，以支援研究與決策制定。</p>
+
+                            <p>我成長於一個四口之家，家庭溫馨、氣氛良好。母親為學校教師，使我自小耳濡目染，養成穩定的閱讀習慣與自主學習能力；父親則於科技業深耕三十餘年，也啟發我走上科技領域的道路。</p>
+
+                            <p>在學期間，我對數理及資料分析領域展現出高度興趣與投入。除了大學及研究所期間選修統計學、實驗設計、資料科學等課程外，也參與多個資料分析專案，從醫療預測到商業營收分析皆有涉獵，熟悉使用 R 與 Matlab 等工具進行資料建模與推論。我所撰寫的碩士論文即為應用模擬技術與 Burr 分布進行製程監控的統計研究，也參與科技部專案，深入探討非常態資料的處理與品質控制方法。</p>
+
+                            <p>畢業後，我曾任職於力成科技擔任生產線主任，主導人員管理與跨部門協調，並推動改善生產品質的專案，具體成效包括降低人為異常、提升良率與減少報廢，這段歷練讓我累積了專案執行、現場管理與問題解決的能力。</p>
+
+                            <p>在深感資料科學發展潛力與個人興趣相符後，我投入全職學習，系統性地進修 Python 編程、資料清洗、分析與視覺化技術。在自強基金會的養成課程中，我獨立參與並完成一項以遊戲銷售資料為主題的分析專案，涵蓋資料前處理、探索性分析、模型建構與成果報告撰寫，建立了從數據到洞察的完整流程概念。</p>
+
+                            <p>目前在國網中心的工作讓我得以實際應用這些技能，處理大型資料集並設計互動式視覺化報表。為了提升視覺化呈現的效果，我也進一步學習 HTML 與 JavaScript，並實際運用 Highcharts、amCharts、Leaflet 等前端視覺化工具製作圖表與地圖儀表板，強化數據表達力與互動性，使分析成果更易於理解與應用。</p>
+
+                            <p>工作之餘，我的興趣是種菜與飼養昆蟲，觀察動植物的成長變化總能帶給我放鬆與樂趣。假日我也喜歡走路或爬山親近自然，偶爾會看場電影或享受一頓豐盛大餐，讓生活保有平衡與多樣性。</p>
+
+                            <p>雖然我踏入資料科學實務的時間尚不長，但具備完整的學術訓練背景、扎實的數據處理能力，以及跨領域的實務經驗。我始終保持學習熱情與解決問題的積極態度，期望未來有機會進一步發揮所長，為團隊創造實質價值。</p>
+
                         </div>
                     </div>
                 </div>
